<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Auth</string>

    <!-- facebook app id -->
    <string name="app_id">yourAppId</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="login_intro">Check out your profiles by logging in with the button below!</string>
    <string name="location">Location</string>
    <string name="gender">Gender</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="relationship">Relationship</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="twitter_login">Login with Twitter</string>
    <string name="weibo_login">Login with Weibo</string>
    <string name="wechat_login">Login with Wechat</string>
</resources>
