<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/userProfilePicture"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:scaleType="centerInside" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="#333"
            android:textSize="18sp" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <TableRow>

            <TextView
                android:id="@+id/label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:text="@string/location"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_span="2"
                android:layout_weight="1"
                android:background="#999" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:text="@string/gender"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_span="2"
                android:layout_weight="1"
                android:background="#999" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/label3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:text="@string/date_of_birth"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:textSize="16sp" />
        </TableRow>

        <TableRow>

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:layout_span="2"
                android:layout_weight="1"
                android:background="#999" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/label4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:text="@string/relationship"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:text="@string/logout"
        android:textColor="#fff"
        android:textStyle="bold" />

</LinearLayout>
